<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/publisher"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/publisher"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/soupName"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/soup_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/quantity"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/quantity"
                android:inputType="text"
                android:minHeight="48dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/cooking_time"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/cooking_time"
                android:inputType="text"
                android:minHeight="48dp"
                android:textAlignment="center" />
        </LinearLayout>

        <EditText
            android:id="@+id/Ingredients"
            android:layout_width="340dp"
            android:layout_height="110dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/ingredients"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/howCooking"
            android:layout_width="340dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/how_is_it_cooking"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/uploadImage"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="48dp"
                android:text="@string/upload_image" />

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:minHeight="48dp"
                android:text="@string/choose_image" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>